Clean-up and optimize code, Handle (most) warnings, Update puml and variable names